# ai4-cookiecutter-adv

./: .gitignore  README.md  cookiecutter.json  requirements.txt
docs/docs/: index.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_arguments.py  test_directories.py  test_exceptions.py  test_metadata.py
tests/configurations/: bad-baseimage.yml  bad-cpu_tag.yml  bad-gpu_tag.yml  bad-name.yml  bad-submodule.yml  config-1.yml  config-2.yml  no-source.yml  submodule.yml
{{ cookiecutter.__repo_name }}/: .gitignore  Dockerfile  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  checkpoint_example.py  metadata.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
{{ cookiecutter.__repo_name }}/.sqa/: config.yml
{{ cookiecutter.__repo_name }}/DEEP-OC-{{ cookiecutter.__repo_name }}/: Dockerfile
{{ cookiecutter.__repo_name }}/api/: __init__.py  config.py  parsers.py  responses.py  schemas.py  utils.py
{{ cookiecutter.__repo_name }}/docs/: conf.py  index.rst
{{ cookiecutter.__repo_name }}/notebooks/: 1.0-{{ cookiecutter.__app_name }}_start.ipynb
{{ cookiecutter.__repo_name }}/tests/: README.md
{{ cookiecutter.__repo_name }}/tests/test_metadata/: test_metadata.py  test_requirements.py
{{ cookiecutter.__repo_name }}/tests/test_predictions/: conftest.py  test_predictions.py
{{ cookiecutter.__repo_name }}/tests/test_training/: conftest.py  test_training.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__app_name }}/: README.md  __init__.py  config.py  utils.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__repo_name }}/: README.md  __init__.py  config.py  predict.py  train.py  utils.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__repo_name }}/dataset/: __init__.py  make_dataset.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__repo_name }}/models/: __init__.py  create_model.py
{{ cookiecutter.__repo_name }}/{{ cookiecutter.__repo_name }}/visualization/: visualize.py
{{ cookiecutter.package_slug }}/: Dockerfile  LICENSE  README.md  metadata.json  pyproject.toml  tox.ini
{{ cookiecutter.package_slug }}/.sqa/: config.yml  dockerfile
{{ cookiecutter.package_slug }}/api/: __init__.py  config.py  responses.py  schemas.py  utils.py
{{ cookiecutter.package_slug }}/docs/: Makefile  conf.py  index.rst  make.bat
{{ cookiecutter.package_slug }}/notebooks/: 1.0-{{ cookiecutter.__model_source }}_start.ipynb
{{ cookiecutter.package_slug }}/tests/: README.md
{{ cookiecutter.package_slug }}/{{ cookiecutter.__model_source }}/: README.md  __init__.py  config.py  utils.py
