[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.__repo_name }}"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "{{ cookiecutter.open_source_license }}" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "{{ cookiecutter.git_base_url }}/{{ cookiecutter.__repo_name }}"
"Bug Tracker" = "{{ cookiecutter.git_base_url }}/{{ cookiecutter.__repo_name }}/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/datasets", "MODELS_PATH=tests/models"]

[tool.setuptools]
packages = ["{{ cookiecutter.__repo_name }}", "{{ cookiecutter.__repo_name }}.api"]

[tool.setuptools.package-dir]
"{{ cookiecutter.__repo_name }}.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
{{ cookiecutter.__repo_name }} = "{{ cookiecutter.__repo_name }}.api"
