[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_slug }}"
authors = [
{%- set names = cookiecutter.author_name.split(',') -%}
{%- set emails = cookiecutter.author_email.split(',') -%}
{%- for i in range(0, names|length) %}
    { name = "{{ names[i].strip() }}", email = "{{ emails[i].strip() }}" },
{%- endfor %}
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "{{ cookiecutter.open_source_license }}" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "{{ cookiecutter.git_base_url }}/{{ cookiecutter.package_slug }}"
"Bug Tracker" = "{{ cookiecutter.git_base_url }}/{{ cookiecutter.package_slug }}/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "{{ cookiecutter.__model_source|upper }}_DATA_PATH=tests/data",
    "{{ cookiecutter.__model_source|upper }}_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
{%- if cookiecutter.add_model_template %}
    "{{ cookiecutter.__model_source }}",
{%- endif %}
    "{{ cookiecutter.__model_source }}.api",
]

[tool.setuptools.package-dir]
"{{ cookiecutter.__model_source }}.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
{{ cookiecutter.__model_source }} = "{{ cookiecutter.__model_source }}.api"
